Project

General

Profile

Actions

Bug #61502

closed

crimson::common::RefCountedObject::_get() assert

Added by chunmei liu 12 months ago. Updated 4 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

0# pthread_kill in /lib/x86_64-linux-gnu/libc.so.6
1# raise in /lib/x86_64-linux-gnu/libc.so.6
2# abort in /lib/x86_64-linux-gnu/libc.so.6
3# ceph::__ceph_assert_fail(char const*, char const*, int, char const*) in /home/chunmei/ceph/build/bin/crimson-osd
4# ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...) in /home/chunmei/ceph/build/bin/crimson-osd
5# crimson::common::RefCountedObject::_get() const in /home/chunmei/ceph/build/bin/crimson-osd
6# 0x0000559D013406F8 in /home/chunmei/ceph/build/bin/crimson-osd
7# crimson::osd::RepRequest::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>) in /home/chunmei/ceph/build/bin/crimson-osd
8# auto crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<125> > >::_future<crimson::errorated_future_marker<boost::intrusive_ptr<crimson::osd::PG> > >::safe_then<crimson::osd::PGShardManager::run_with_pg_maybe_wait<crimson::osd::RepRequest>(crimson::osd::RepRequest::IRef)::{lambda(auto:1)#1}::operator()<unsigned int>(unsigned int)::{lambda(crimson::osd::PerShardState&, crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::RepRequest>)#1}::operator()(crimson::osd::PerShardState&, crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::RepRequest>) const::{lambda(boost::intrusive_ptr<crimson::osd::PG>)#2}, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<125> > >::pass_further>(crimson::osd::PGShardManager::run_with_pg_maybe_wait<crimson::osd::RepRequest>(crimson::osd::RepRequest::IRef)::{lambda(auto:1)#1}::operator()<unsigned int>(unsigned int)::{lambda(crimson::osd::PerShardState&, crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::RepRequest>)#1}::operator()(crimson::osd::PerShardState&, crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::RepRequest>) const::{lambda(boost::intrusive_ptr<crimson::osd::PG>)#2}&&, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<125> > >::pass_further&&)::{lambda(auto:1&&)#1}::operator()<seastar::future<boost::intrusive_ptr<crimson::osd::PG> > >(crimson::osd::PGShardManager::run_with_pg_maybe_wait<crimson::osd::RepRequest>(crimson::osd::RepRequest::IRef)::{lambda(auto:1)#1}::operator()<unsigned int>(unsigned int)::{lambda(crimson::osd::PerShardState&, crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::RepRequest>)#1}::operator()(crimson::osd::PerShardState&, crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::RepRequest>) const::{lambda(boost::intrusive_ptr<crimson::osd::PG>)#2}&&) in /home/chunmei/ceph/build/bin/crimson-osd
9# 0x0000559D0112DACF in /home/chunmei/ceph/build/bin/crimson-osd
10# 0x0000559D0113E924 in /home/chunmei/ceph/build/bin/crimson-osd
11# seastar::future<void> crimson::osd::PGShardManager::run_with_pg_maybe_wait<c

Actions #1

Updated by chunmei liu 12 months ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Matan Breizman 11 months ago

  • Pull request ID set to 51827
Actions #3

Updated by Matan Breizman 11 months ago

  • Assignee set to chunmei liu
Actions #4

Updated by Matan Breizman 4 months ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF