crimson: use atomic counter for RefCountedObject as with classic

crimson-osd uses RefCountedObject instances for objects that move between
reactors, so we really do need to use an atomic counter.

Fixes: https://tracker.ceph.com/issues/61502

Signed-off-by: chunmei <chunmei.liu@intel.com>