src/common/RefCountedObj.h
@@ -74,12 +74,7 @@ protected:
 private:
   void _get() const;
 
-#if defined(WITH_SEASTAR) && !defined(WITH_ALIEN)
-  // crimson is single threaded at the moment
-  mutable uint64_t nref{1};
-#else
   mutable std::atomic<uint64_t> nref{1};
-#endif
   CephContext *cct{nullptr};
 };
 
